# masubi

./: .env.example  .gitignore  CURSOR_PLAN.md  README.md  annotation_rubric.md  dashboard.py  program.md  pyproject.toml  run_loop.py  setup.sh  spec.yaml  train.py
autotrust/: __init__.py  __main__.py  config.py  data.py  eval.py  export.py  freeze.py  inference.py  observe.py  schemas.py  student.py
autotrust/dashboard/: __init__.py  charts.py  data_loader.py  git_history.py  log_formatter.py  run_manager.py  utils.py
autotrust/providers/: __init__.py  anthropic.py  hyperbolic.py  ollama.py
docs/: 10min.md  GPT_REVIEW.md  GRADIO_DASHBOARD_PRD.md  INITIAL_DESIGN_CHOICES.md  REDESIGN_AUTOSEARCH_TRD.md  SIMPLE.md  WHY_DIFFERENT_THAN_AUTORESEARCH.md
docs/DASHBOARD_TASKS/: TASK_001_scaffold.md
docs/DASHBOARD_TASKS_ISSUES/: DASHBOARD_TASKS_ISSUE_001.md  DASHBOARD_TASKS_ISSUE_002.md  (+14 more)
eval_set/: eval_chains.jsonl
gold_set/: gold_candidates.jsonl
teacher/: explanation_schema.json  label_rules.yaml  prompt_pack.yaml
tests/: test_charts.py  test_composite_metric.py  test_config.py  test_dashboard_integration.py  test_data_loader.py  test_escalation_rules.py  test_explanation_gate.py  test_export.py  test_freeze.py  test_git_history.py  test_gold_gate.py  test_inference.py  test_kappa_downweight.py  test_log_formatter.py  test_moe_model.py  test_observe.py  test_providers.py  test_run_loop.py  test_run_manager.py  test_safety_filter.py  test_schema_validation.py  test_smoke.py  test_stage_transition.py  test_student_model.py  test_train.py
(+40 files in other folders)
